--- a/index.html
+++ b/index.html
@@ -84,16 +84,11 @@
       </div>
     </div>
   </main>
-  <!-- <script>
-    window.addEventListener('load', function () {
-      baguetteBox.run('.item');
-    });
-  </script> -->
-  <!-- <script src="js/baguetteBox.js" async></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js" async></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
   <script src="js/searchFilter.js"></script>
   <script src="js/app.js"></script>
-  <!-- <script src="js/baguetteBox.min.js" async></script> -->
+
   <script>
     window.addEventListener('load', function () {
       baguetteBox.run('.gallery');
